# BTL-Android

./: .gitignore  README.md  idea.txt  test-run.txt
ai-service/: .env.example  .gitignore  README.md  main.py  pyproject.toml
ai-service/docs/: data_team.md
ai-service/scripts/: export_graph.py
ai-service/src/: config.py  database.py  db_schema.py
ai-service/src/agents/: coordinator.py  graph.py  menu_agent.py  order_agent.py  promotion_agent.py  state.py
ai-service/src/api/: schemas.py  session_history.py
ai-service/src/api/middleware/: lenient_json.py
ai-service/src/api/routes/: chat.py  speech.py
ai-service/src/repositories/: __init__.py  base_repo.py  menu_repo.py  promo_repo.py  records.py
ai-service/src/services/: __init__.py  menu_service.py  promo_service.py
ai-service/src/skills/: __init__.py  guard_skill.py  query_skill.py  response_skill.py
ai-service/src/speech/: asr.py  text_correction.py  vad.py
ai-service/src/teams/: __init__.py  action_team.py  data_team.py  team_router.py
ai-service/src/tools/: menu_tools.py  order_tools.py  promo_tools.py  promotion_tools.py
ai-service/tests/: test_handoff.py
ai-service/tests/integration/: test_chat_data_team.py
ai-service/tests/unit/repositories/: test_menu_repo.py  test_promo_repo.py
ai-service/tests/unit/services/: test_menu_service.py  test_promo_service.py
ai-service/tests/unit/tools/: test_menu_tools.py  test_promo_tools.py
app/: api-specs.yaml  catalogs-api-specs.yaml  products-api-specs.yaml  saleoffs-api-specs.yaml
app/src/: settings.gradle.kts
backend/app-be/: .env  (+3 more)
(+270 files in other folders)
